--- a/src/WC.Service.Authentication.Domain/WC.Service.Authentication.Domain.csproj
+++ b/src/WC.Service.Authentication.Domain/WC.Service.Authentication.Domain.csproj
@@ -11,6 +11,8 @@
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.1" />
+      <PackageReference Include="WC.Library.BCryptPasswordHash" Version="1.0.0" />
+      <PackageReference Include="WC.Library.BCryptPasswordHash.Abstactions" Version="1.0.0" />
       <PackageReference Include="WC.Library.Domain" Version="1.0.2" />
       <PackageReference Include="WC.Library.Shared" Version="1.0.3" />
     </ItemGroup>
