using ne library jwt

--- a/src/WC.Service.Authentication.Domain/WC.Service.Authentication.Domain.csproj
+++ b/src/WC.Service.Authentication.Domain/WC.Service.Authentication.Domain.csproj
@@ -14,6 +14,8 @@
       <PackageReference Include="WC.Library.BCryptPasswordHash" Version="1.0.0" />
       <PackageReference Include="WC.Library.BCryptPasswordHash.Abstactions" Version="1.0.0" />
       <PackageReference Include="WC.Library.Domain" Version="1.0.2" />
+      <PackageReference Include="WC.Library.JwtTokenGenerator" Version="1.0.0" />
+      <PackageReference Include="WC.Library.JwtTokenGenerator.Abstractions" Version="1.0.0" />
       <PackageReference Include="WC.Library.Shared" Version="1.0.3" />
     </ItemGroup>
 
