--- a/src/WC.Service.Authentication.API/appsettings.json
+++ b/src/WC.Service.Authentication.API/appsettings.json
@@ -58,5 +58,8 @@
   "HoursSettings": {
     "AccessHours": "01:00:00",
     "RefreshHours": "24:00:00"
+  },
+  "EmployeeService": {
+    "Url": "http://localhost:5114"
   }
 }
