--- a/src/WC.Service.Authentication.Domain/WC.Service.Authentication.Domain.csproj
+++ b/src/WC.Service.Authentication.Domain/WC.Service.Authentication.Domain.csproj
@@ -13,15 +13,16 @@
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.3" />
       <PackageReference Include="WC.Library.BCryptPasswordHash" Version="1.0.0" />
       <PackageReference Include="WC.Library.BCryptPasswordHash.Abstactions" Version="1.0.0" />
-      <PackageReference Include="WC.Library.Domain" Version="1.0.16" />
-      <PackageReference Include="WC.Library.Employee.Shared" Version="1.0.4" />
+      <PackageReference Include="WC.Library.Domain" Version="1.0.18" />
+      <PackageReference Include="WC.Library.Employee.Shared" Version="1.0.6" />
       <PackageReference Include="WC.Library.Shared" Version="1.0.6" />
-      <PackageReference Include="WC.Service.Employees.gRPC.Client" Version="1.0.3" />
-      <PackageReference Include="WC.Service.Employees.gRPC.Client.Abstractions" Version="1.0.4" />
+      <PackageReference Include="WC.Service.Employees.gRPC.Client" Version="1.0.4" />
+      <PackageReference Include="WC.Service.Employees.gRPC.Client.Abstractions" Version="1.0.5" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\WC.Service.Authentication.Domain.Abstractions\WC.Service.Authentication.Domain.Abstractions.csproj" />
+      <ProjectReference Include="..\WC.Service.Authentication.gRPC.Client\WC.Service.Authentication.gRPC.Client.csproj" />
     </ItemGroup>
 
 </Project>
