--- a/src/WC.Service.Authentication.API/appsettings.json
+++ b/src/WC.Service.Authentication.API/appsettings.json
@@ -51,13 +51,14 @@
     "Application": "ServiceAuthentication"
   },
   "AllowedHosts": "*",
-  "ApiSettings": {
-    "AccessSecret": "tM+Lm9iti8KzwHNeHXVzQrIcMm8GNIFjf73UiZpKnP4=",
-    "RefreshSecret": "EbHZ+4Zt692SooDDecePgw1NfKeb3DuzdANgVcTlZ+w="
+  "AuthenticationConfiguration": {
+    "AccessSecretKey": "tM+Lm9iti8KzwHNeHXVzQrIcMm8GNIFjf73UiZpKnP4="
   },
-  "HoursSettings": {
+  "AuthenticationSettings": {
     "AccessHours": "01:00:00",
-    "RefreshHours": "24:00:00"
+    "RefreshHours": "24:00:00",
+    "AccessSecretKey": "tM+Lm9iti8KzwHNeHXVzQrIcMm8GNIFjf73UiZpKnP4=",
+    "RefreshSecretKey": "EbHZ+4Zt692SooDDecePgw1NfKeb3DuzdANgVcTlZ+w="
   },
   "EmployeeService": {
     "Url": "http://localhost:5114"
