--- a/src/WC.Service.Authentication.gRPC.Server/appsettings.json
+++ b/src/WC.Service.Authentication.gRPC.Server/appsettings.json
@@ -54,13 +54,11 @@
       "Protocols": "Http2"
     }
   },
-  "ApiSettings": {
-    "AccessSecret": "tM+Lm9iti8KzwHNeHXVzQrIcMm8GNIFjf73UiZpKnP4=",
-    "RefreshSecret": "EbHZ+4Zt692SooDDecePgw1NfKeb3DuzdANgVcTlZ+w="
-  },
-  "HoursSettings": {
+  "AuthenticationSettings": {
     "AccessHours": "01:00:00",
-    "RefreshHours": "24:00:00"
+    "RefreshHours": "24:00:00",
+    "AccessSecretKey": "tM+Lm9iti8KzwHNeHXVzQrIcMm8GNIFjf73UiZpKnP4=",
+    "RefreshSecretKey": "EbHZ+4Zt692SooDDecePgw1NfKeb3DuzdANgVcTlZ+w="
   },
   "EmployeeService": {
     "Url": "http://localhost:5114"
