--- a/src/WC.Service.Authentication.Domain/WC.Service.Authentication.Domain.csproj
+++ b/src/WC.Service.Authentication.Domain/WC.Service.Authentication.Domain.csproj
@@ -9,12 +9,12 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="8.0.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2"/>
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.0"/>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1"/>
     <PackageReference Include="WC.Library.Domain" Version="1.0.23"/>
     <PackageReference Include="WC.Library.Employee.Shared" Version="1.0.11"/>
     <PackageReference Include="WC.Library.Shared" Version="1.0.8"/>
-    <PackageReference Include="WC.Service.Employees.gRPC.Client" Version="1.0.9"/>
-    <PackageReference Include="WC.Service.Employees.gRPC.Client.Abstractions" Version="1.0.9"/>
+    <PackageReference Include="WC.Service.PersonalData.gRPC.Client" Version="1.0.7"/>
+    <PackageReference Include="WC.Service.PersonalData.gRPC.Client.Abstractions" Version="1.0.6"/>
   </ItemGroup>
 
   <ItemGroup>
