--- a/src/WC.Service.Authentication.gRPC.Server/appsettings.Development.json
+++ b/src/WC.Service.Authentication.gRPC.Server/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Services": {
+    "personal-data": "https://localhost:2004"
   }
 }
