--- a/src/WC.Service.Authentication.API/appsettings.json
+++ b/src/WC.Service.Authentication.API/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "WorkChatDB": "Host=localhost;Port=5432;Database=WorkChat;Username=postgres;Password=1234"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
@@ -60,7 +57,7 @@
     "AccessSecretKey": "tM+Lm9iti8KzwHNeHXVzQrIcMm8GNIFjf73UiZpKnP4=",
     "RefreshSecretKey": "EbHZ+4Zt692SooDDecePgw1NfKeb3DuzdANgVcTlZ+w="
   },
-  "PersonalDataService": {
-    "Url": "http://localhost:5117"
+  "Services": {
+    "personal-data": "https://wc-service-personaldata-grpc-server:8080"
   }
 }
