--- a/src/WC.Service.Authentication.gRPC.Server/appsettings.json
+++ b/src/WC.Service.Authentication.gRPC.Server/appsettings.json
@@ -60,7 +60,7 @@
     "AccessSecretKey": "tM+Lm9iti8KzwHNeHXVzQrIcMm8GNIFjf73UiZpKnP4=",
     "RefreshSecretKey": "EbHZ+4Zt692SooDDecePgw1NfKeb3DuzdANgVcTlZ+w="
   },
-  "PersonalDataService": {
-    "Url": "http://localhost:5117"
+  "Services": {
+    "personal-data": "https://wc-service-personaldata-grpc-server:8080"
   }
 }
