--- a/src/WC.Service.Authentication.API/appsettings.json
+++ b/src/WC.Service.Authentication.API/appsettings.json
@@ -58,6 +58,6 @@
     "RefreshSecretKey": "EbHZ+4Zt692SooDDecePgw1NfKeb3DuzdANgVcTlZ+w="
   },
   "Services": {
-    "personal-data": "https://wc-service-personaldata-grpc-server:8080"
+    "personal-data": "http://wc-service-personaldata-grpc-server:8080"
   }
 }
