--- a/src/WC.Service.Authentication.gRPC.Server/Properties/launchSettings.json
+++ b/src/WC.Service.Authentication.gRPC.Server/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:2005",
+      "applicationUrl": "http://localhost:2005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
