--- a/src/WC.Service.Authentication.API/appsettings.json
+++ b/src/WC.Service.Authentication.API/appsettings.json
@@ -47,6 +47,18 @@
   "Properties": {
     "Application": "ServiceAuthentication"
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http1": {
+        "Url": "http://*:1005",
+        "Protocols": "Http1"
+      },
+      "Http2": {
+        "Url": "http://*:2005",
+        "Protocols": "Http2"
+      }
+    }
+  },
   "AllowedHosts": "*",
   "AuthenticationConfiguration": {
     "AccessSecretKey": "tM+Lm9iti8KzwHNeHXVzQrIcMm8GNIFjf73UiZpKnP4="
@@ -58,6 +70,6 @@
     "RefreshSecretKey": "EbHZ+4Zt692SooDDecePgw1NfKeb3DuzdANgVcTlZ+w="
   },
   "Services": {
-    "personal-data": "http://wc-service-personaldata-grpc-server:8080"
+    "personal-data": "http://wc-service-personaldata:2004"
   }
 }
