--- a/src/WC.Service.Authentication.AuthorizationAdmin/appsettings.Development.json
+++ b/src/WC.Service.Authentication.AuthorizationAdmin/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "Services": {
     "personal-data": "http://localhost:2004"
+  },
+  "AdminSettings": {
+    "AdminEmailLocalPart": "admin",
+    "AdminEmailDomain": "admin.com",
+    "AdminRegistrationPassword": "Admin@12345678"
   }
 }
