--- a/src/WC.Service.Authentication.AuthorizationAdmin/appsettings.json
+++ b/src/WC.Service.Authentication.AuthorizationAdmin/appsettings.json
@@ -77,5 +77,10 @@
   },
   "Services": {
     "personal-data": "http://wc-service-personaldata:2004"
+  },
+  "AdminSettings": {
+    "AdminEmailLocalPart": "admin",
+    "AdminEmailDomain": "admin.com",
+    "AdminRegistrationPassword": "Admin@12345678"
   }
 }
